fix overlap popup

--- a/lms/static/sass/base/_override.scss
+++ b/lms/static/sass/base/_override.scss
@@ -2064,6 +2064,10 @@ body.view-in-course .instructor-dashboard-wrapper-2 {
     }
 }
 
+.instructor-dashboard-wrapper-2 section.idash-section#membership .enroll-option .hint {
+    z-index: 3;
+}
+
 .instructor-dashboard-wrapper-2 #membership .member-list-widget .add-field {
     width: 100%;
     @media screen and (min-width: 761px) {
